--- a/ecommerce/loja/templates/ver_produto.html
+++ b/ecommerce/loja/templates/ver_produto.html
@@ -3,47 +3,6 @@
 
 {% block body %}
 
-<h3>{{ produto.nome }}</h3>
-
-{% if tem_estoque %}
-
-<img src="{{ produto.imagem.url }}" width="300" height="300">
-<p>Produto: {{produto.nome}}</p>
-<p>Preço: {{produto.preco}}</p>
-
-{% if cor_selecionada %}
-
-Cor: {{ cor_selecionada.nome }}
-
-{% endif %}
-
-{% for cor in cores %}
-<a href="{% url 'ver_produto' produto.id cor.id %}">
-    <i class="fa-solid fa-circle" style="color: {{ cor.codigo }};"></i> 
-</a>
-{% endfor %}
-
-{% if tamanhos%}
-<form method="post" action="{% url 'adicionar_carrinho' produto.id %}">
-    {% csrf_token %}
-    <p>Selecione o tamanho:</p>
-    {% for tamanho in tamanhos %}
-    <input type="radio" name="tamanho" value="{{ tamanho }}">
-    <label for="{{ tamanho }}">{{ tamanho }}</label>
-    {% endfor %}
-
-    <input type="hidden" name="cor" value="{{ cor_selecionada.id }}">
-    <button type="submit">Adicionar ao Carrinho</button>
-</form>
-{% endif %}
-
-{% else %}
-
-<p>Produto sem estoque</p>
-
-{% endif %} 
-
-
 <main class="principal principal--padding-b principal--gap">
     <section class="s-produto">
       <div class="s-produto__carrossel">
@@ -88,111 +47,66 @@ Cor: {{ cor_selecionada.nome }}
               {% endfor %}
             </div>
           </div>
-          {% if tamanhos%}
-            <form method="post" action="{% url 'adicionar_carrinho' produto.id %}">
-              {% csrf_token %}
-              <div class="s-produto__tamanho">
+          {% if tem_estoque %}
+            {% if tamanhos%}
+              <form method="post" action="{% url 'adicionar_carrinho' produto.id %}">
+                {% csrf_token %}
+                <div class="s-produto__tamanho">
 
-                <div class="s-produto__tamanhos">
-                  {% for tamanho in tamanhos %}
-                  <div class="menu__tamanho">
-                    <div class="s-produto__tamanhos-item">{{ tamanho }}</div>
-                    <input class="menu__checkbox" type="radio" name="tamanho" value="{{ tamanho }}">
+                  <div class="s-produto__tamanhos">
+                    {% for tamanho in tamanhos %}
+                    <div class="menu__tamanho">
+                      <div class="s-produto__tamanhos-item">{{ tamanho }}</div>
+                      <input class="menu__checkbox" type="radio" name="tamanho" value="{{ tamanho }}">
+                    </div>
+                    {% endfor %}
                   </div>
-                  {% endfor %}
+
                 </div>
 
-              </div>
-
-              <input type="hidden" name="cor" value="{{ cor_selecionada.id }}">
-              <button class="s-produto__adicicionar">Adicionar ao carrinho</button>  
-            </form>
+                <input type="hidden" name="cor" value="{{ cor_selecionada.id }}">
+                <button class="s-produto__adicicionar">Adicionar ao carrinho</button>  
+              </form>
+            {% endif %}
+          {% else %}
+          <h3>Item fora de estoque</h3>
           {% endif %}
         </div>
 
         <div class="s-produto__descricao">
           <p class="s-produto__descricao-titulo">Descrição do produto</p>
-          <div class="s-produto__descricao-textos">
-            <p>
-              Básicos indispensáveis! A camiseta de algodão cropped é perfeita
-              para usar com calças e saias de cintura alta.
-            </p>
-            <p>
-              COMPOSIÇÃO <br />
-              96% Viscose 4% Elastano
-            </p>
-            <p>
-              CÓDIGO DO PRODUTO <br />
-              Ref: <span>0078397051</span>
-            </p>
+          <div class="s-produto__descricao-textos" style="text-align: justify;">
+            <p>{{ produto.descricao|linebreaks }}</p>
+            <p>CÓDIGO DO PRODUTO <br /> Ref: <span>{{ produto.id }}</span></p>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="similares">
-      <h2 class="similares__titulo">
-        Gostou desse produto? Veja itens similares
-      </h2>
+    {% if similares %}
+      <section class="similares">
+        <h2 class="similares__titulo">
+          Gostou desse produto? Veja itens similares
+        </h2>
 
-      <div class="similares__container">
-        <a href="https://www.usereserva.com/camiseta-silk-folhagem0078068/p?skuId=499434" class="produto">
-          <div class="produto__imagem">
-            <img src="https://lojausereserva.vtexassets.com/arquivos/ids/8404940-2400-auto?v=638358284054500000&width=2400&height=auto&aspect=true" alt="Imagem do Produto"/>
-          </div>
-
-          <div class="produto__textos">
-            <p class="produto__titulo">Camiseta Silk Folhagem</p>
-            <div class="produto__preco">
-              <p class="produto__avista">R$ 349<sup>,00</sup></p>
-              <p class="produto__parcelado">5x R$ 69<sup>,80</sup></p>
-            </div>
-          </div>
-        </a>
-
-        <a href="https://www.usereserva.com/camiseta-silk-folhagem0078068/p?skuId=499434" class="produto">
-          <div class="produto__imagem">
-            <img src="https://lojausereserva.vtexassets.com/arquivos/ids/8404940-2400-auto?v=638358284054500000&width=2400&height=auto&aspect=true" alt="Imagem do Produto"/>
-          </div>
-          
-          <div class="produto__textos">
-            <p class="produto__titulo">Camiseta Silk Folhagem</p>
-            <div class="produto__preco">
-              <p class="produto__avista">R$ 349<sup>,00</sup></p>
-              <p class="produto__parcelado">5x R$ 69<sup>,80</sup></p>
-            </div>
-          </div>
-        </a>
-
-        <a href="https://www.usereserva.com/camiseta-silk-folhagem0078068/p?skuId=499434" class="produto">
-            <div class="produto__imagem">
-              <img src="https://lojausereserva.vtexassets.com/arquivos/ids/8404940-2400-auto?v=638358284054500000&width=2400&height=auto&aspect=true" alt="Imagem do Produto"/>
-            </div>
-            
-            <div class="produto__textos">
-              <p class="produto__titulo">Camiseta Silk Folhagem</p>
-              <div class="produto__preco">
-                <p class="produto__avista">R$ 349<sup>,00</sup></p>
-                <p class="produto__parcelado">5x R$ 69<sup>,80</sup></p>
+        <div class="similares__container">
+          {% for similar in similares %}
+            <a href="{% url 'ver_produto' similar.id %}" class="produto">
+              <div class="produto__imagem">
+                <img src="{{ similar.imagem.url }}" alt="Imagem do Produto"/>
               </div>
-            </div>
-          </a>
 
-          <a href="https://www.usereserva.com/camiseta-silk-folhagem0078068/p?skuId=499434" class="produto">
-            <div class="produto__imagem">
-              <img src="https://lojausereserva.vtexassets.com/arquivos/ids/8404940-2400-auto?v=638358284054500000&width=2400&height=auto&aspect=true" alt="Imagem do Produto"/>
-            </div>
-            
-            <div class="produto__textos">
-              <p class="produto__titulo">Camiseta Silk Folhagem</p>
-              <div class="produto__preco">
-                <p class="produto__avista">R$ 349<sup>,00</sup></p>
-                <p class="produto__parcelado">5x R$ 69<sup>,80</sup></p>
+              <div class="produto__textos">
+                <p class="produto__titulo">{{ similar.nome }}</p>
+                <div class="produto__preco">
+                  <p class="produto__avista">{{ similar.preco }} €</p>
+                </div>
               </div>
-            </div>
-          </a>
-      </div>
-    </section>
+            </a>
+          {% endfor %}
+        </div>
+      </section>
+    {% endif %}
   </main>
 
 <script type="text/javascript" src="{% static 'js/produto.js' %}"></script>
