--- a/ecommerce/loja/templates/usuario/minha_conta.html
+++ b/ecommerce/loja/templates/usuario/minha_conta.html
@@ -3,52 +3,87 @@
 
 {% block body %}
 
-<h3>Minha conta</h3>
-<a href="{% url 'meus_pedidos' %}">Meus pedidos</a>
+<main class="principal">
+    <section class="conta">
+    
+    {% if alterado %}
+        <p>Alterações salvas com sucesso</p>
+    {% endif %}
 
-<a href="{% url 'fazer_logout' %}">Sair da conta</a>
+    {% if erro == "formulario_invalido" %}
+        <p>Formulário Inválido, tente novamente</p>
+    {% endif %}
 
+    
+      <div class="conta__container">
+        <div class="checkout__titulos">
+          <p class="checkout__titulo">Dados pessoais</p>
+        </div>
+        
+        {% if erro == "email_existente" %}
+            <p>Já existe um usuário com esse e-mail</p>
+        {% endif %}
 
-{% if alterado %}
-<p>Alterações salvas com sucesso</p>
-{% endif %}
+        <form class="conta__form" action="{% url 'minha_conta'%}" method="post">
+            {% csrf_token %}
+          <div class="conta__item conta__item--email">
+            <label for="nome">Nome</label>
+            <input name="nome" type="text" placeholder="Nome Completo" {% if request.user.cliente.nome %}value="{{ request.user.cliente.nome }}"{% endif %}/>
+          </div>
 
-{% if erro == "senha_incorreta" %}
-<p>Sua senha está incorreta</p>
-{% endif %}
+          <div class="conta__item">
+            <label for="email">E-mail</label>
+            <input name="email" type="email" placeholder="E-mail" value="{{ request.user.email }}"/>
+          </div>
 
-{% if erro == "senhas_diferentes" %}
-<p>Nova senha e confirmação da nova senha não estão iguais</p>
-{% endif %}
+          <div class="conta__item">
+            <label for="telefone">Telefone</label>
+            <input name="telefone" type="number" placeholder="Telefone" value="{{ request.user.cliente.telefone }}"/>
+          </div>
 
-{% if erro == "email_existente" %}
-<p>Já existe um usuário com esse e-mail</p>
-{% endif %}
+          <button class="subtotal__botao" type="submit">
+            Salvar alterações
+          </button>
+        </form>
+      </div>
 
-{% if erro == "formulario_invalido" %}
-<p>Formulário Inválido, tente novamente</p>
-{% endif %}
+      <div class="conta__container">
+        <div class="checkout__titulos">
+          <p class="checkout__titulo">Alterar a Senha</p>
+        </div>
 
-<h3>Meus dados</h3>
-<form method="POST" action="{% url 'minha_conta'%}">
-    {% csrf_token %}
-    <input type="text" name="nome" placeholder="Nome Completo" {% if request.user.cliente.nome %}value="{{ request.user.cliente.nome }}"{% endif %}>
-    <input type="email" name="email" placeholder="E-mail" value="{{ request.user.email }}">
-    <input type="number" name="telefone" placeholder="Telefone" value="{{ request.user.cliente.telefone }}">
-    <button type="submit">Salvar</button>
+        {% if erro == "senha_incorreta" %}
+            <p>Sua senha está incorreta</p>
+        {% endif %}
 
-</form>
+        {% if erro == "senhas_diferentes" %}
+            <p>Nova senha e confirmação da nova senha não estão iguais</p>
+        {% endif %}
 
-<hr>
+        <form class="conta__form" action="{% url 'minha_conta'%}" method="post">
+            {% csrf_token %}
+          <div class="conta__item">
+            <label for="senha_atual">Senha Atual</label>
+            <input type="password" name="senha_atual" placeholder="Senha Atual"/>
+          </div>
 
-<h3>Alterar Senha</h3>
-<form method="POST" action="{% url 'minha_conta'%}">
-    {% csrf_token %}
-    <input type="password" name="senha_atual" placeholder="Senha Atual">
-    <input type="password" name="nova_senha" placeholder="Nova Senha">
-    <input type="password" name="nova_senha_confirmacao" placeholder="Confirmação Nova Senha">
-    <button type="submit">Editar Senha</button>
-</form>
+          <div class="conta__item">
+            <label for="nova_senha">Nova Senha</label>
+            <input type="password" name="nova_senha" placeholder="Nova Senha"/>
+          </div>
+
+          <div class="conta__item">
+            <label for="nova_senha_confirmacao">Confirmação da Nova Senha</label>
+            <input type="password" name="nova_senha_confirmacao" placeholder="Confirmação Nova Senha"/>
+          </div>
+
+          <button class="subtotal__botao" type="submit">
+            Salvar alterações
+          </button>
+        </form>
+      </div>
+    </section>
+</main>
 
 
 {% endblock %}
