--- a/ecommerce/loja/templates/usuario/criar_conta.html
+++ b/ecommerce/loja/templates/usuario/criar_conta.html
@@ -3,34 +3,56 @@
 
 {% block body %}
 
-<h3>Preencha seus dados para criar uma conta</h3>
+<main class="principal">
+    <section class="conta">
+    
+      <div class="conta__container">
+        <div class="checkout__titulos">
+          <p class="checkout__titulo">Crie sua Conta</p>
+        </div>
+        
+        {% if erro == "preenchimento" %}
+            <p>Preencha todas as informações do formulário corretamente para criar uma conta</p>
+        {% endif %}
 
-{% if erro == "preenchimento" %}
-<p>Preencha todas as informações do formulário corretamente para criar uma conta</p>
-{% endif %}
+        {% if erro == "email_invalido" %}
+            <p>Seu e-mail está inválido, tente novamente com outro e-mail</p>
+        {% endif %}
 
-{% if erro == "email_invalido" %}
-<p>Seu e-mail está inválido, tente novamente com outro e-mail</p>
-{% endif %}
+        {% if erro == "usuario_existente" %}
+            <p>Já existe um usuário com este e-mail, <a href="{% url 'fazer_login' %}">faça login</a></p>
+        {% endif %}
 
-{% if erro == "usuario_existente" %}
-<p>Já existe um usuário com este e-mail, <a href="{% url 'fazer_login' %}">faça login</a></p>
-{% endif %}
+        {% if erro == "senhas_diferentes" %}
+            <p>Senha e confirmação de senha não estão iguais, tente novamente</p>
+        {% endif %}
 
-{% if erro == "senhas_diferentes" %}
-<p>Senha e confirmação de senha não estão iguais, tente novamente</p>
-{% endif %}
+        <form class="conta__form" action="{% url 'criar_conta' %}" method="post">
+            {% csrf_token %}
 
-<form method="POST" action="{% url 'criar_conta' %}">
-    {% csrf_token %}
+          <div class="conta__item conta__item--email">
+            <label for="email">E-mail</label>
+            <input name="email" type="email" placeholder="E-mail"/>
+          </div>
 
-    <input type="email" name="email" placeholder="E-Mail">
-    <input type="password" name="senha" placeholder="Senha">
-    <input type="password" name="confirmacao_senha" placeholder="Confirmação da senha">
-    <button type="submit">Criar conta</button>
+          <div class="conta__item">
+            <label for="senha">Senha</label>
+            <input name="senha" type="password" placeholder="Senha"/>
+          </div>
 
-</form>
+          <div class="conta__item">
+            <label for="confirmacao_senha">Confirmação da Senha</label>
+            <input name="confirmacao_senha" type="password" placeholder="Confirmação da senha"/>
+          </div>
 
-<a href="{% url 'fazer_login' %}">Já possui uma conta? Faça login</a>
+          <button class="subtotal__botao" type="submit">
+            Criar Conta
+          </button>
+        </form>
+        <a href="{% url 'fazer_login' %}">Já possui uma conta? Faça login</a>
+      </div>
+
+    </section>
+</main>
 
 {% endblock %}
