--- a/ecommerce/loja/templates/usuario/login.html
+++ b/ecommerce/loja/templates/usuario/login.html
@@ -3,23 +3,41 @@
 
 {% block body %}
 
-<h3>Faça seu Login</h3>
+<main class="principal">
+    <section class="conta">
+    
+      <div class="conta__container">
+        <div class="checkout__titulos">
+          <p class="checkout__titulo">Faça seu Login</p>
+        </div>
+        
+        {% if erro %}
+            <h4>E-Mail ou senha incorretos, tente novamente ou crie uma conta</h4>
+        {% endif %}
 
-{% if erro %}
+        <form class="conta__form" action="{% url 'fazer_login' %}" method="post">
+            {% csrf_token %}
 
-<h4>E-Mail ou senha incorretos, tente novamente ou crie uma conta</h4>
+          <div class="conta__item">
+            <label for="email">E-mail</label>
+            <input name="email" type="email" placeholder="E-mail" value="{{ request.user.email }}"/>
+          </div>
 
-{% endif %}
-<form method="POST" action="{% url 'fazer_login' %}">
-    {% csrf_token %}
+          <div class="conta__item">
+            <label for="senha">Senha</label>
+            <input name="senha" type="password" placeholder="Senha"/>
+          </div>
 
-    <input type="email" name="email" placeholder="E-Mail">
-    <input type="password" name="senha" placeholder="Senha">
-    <button type="submit">Entrar</button>
+          <button class="subtotal__botao" type="submit">
+            Entrar
+          </button>
+        </form>
+        <a href="{% url 'criar_conta' %}">Não tem uma conta? Criar conta</a>
+        <a href="{% url 'password_reset' %}">Esqueci minha senha</a>
+      </div>
 
-</form>
+    </section>
+</main>
 
-<a href="{% url 'criar_conta' %}">Não tem uma conta? Criar conta</a>
-<a href="{% url 'password_reset' %}">Esqueci minha senha</a>
 
 {% endblock %}
